<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eRemote</string>
    <string name="logo_alt">iMeals eRemote</string>
    <string name="welcome_text">Veuillez choisir un module dans la liste présentée ci-dessous.</string>
    <string name="test_text">Simple test text view content.</string>
    <string name="button_text">Continuer</string>
    <string name="login_info">Veuillez entrer les informations de connexion qui vous ont été communiquées lors de la création de votre compte.</string>
    <string name="login_case">Les valeurs entrées sont sensibles à la casse. (choix Majuscule/Minuscule important)</string>
    <string name="login_desc">Veuillez ensuite choisir le restaurant devant être utilisé pour votre session.</string>
    <string name="login_username">Nom d\'utilisateur :</string>
    <string name="login_password">Mot de passe :</string>
    <string name="login_restaurant">Restaurant :</string>
    <string name="order_table_label">Veuillez choisir la table concernée par la commande que vous voulez enregistrer dans la liste ci-dessous :</string>
    <string name="button_add_meal">Ajouter un élément</string>
    <string name="addmeal_category_label">Catégorie de plât :</string>
    <string name="addmeal_meal_label">Plât désiré :</string>
    <string name="button_addmeal_process">Continuer</string>
    <string name="addmeal_title">Choix du plât</string>
    <string name="addmeal_custom_label">Modifications :</string>
    <string name="button_addmeal_addcustomization">Modifier le plât</string>
    <string name="addcustomization_title">Désirs</string>
    <string name="button_addcustomization_process">Continuer</string>
    <string name="addcustomization_customization_label">Supplément :</string>
    <string name="addcustomization_action_label">Action :</string>
    <string name="addmeal_quantity_txt">Quantité :</string>
</resources>
