<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
            android:id="@+id/imeals_logo_details"
            android:contentDescription="@string/logo_alt"
            android:src="@drawable/imeals_logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/order_table_label_txt"
            android:text="@string/order_table_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <Spinner
            android:id="@+id/tables_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    <TextView
            android:id="@+id/order_meals_list"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <Button
            android:id="@+id/add_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_meal" />

</LinearLayout>