<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:id="@+id/addmeal_category_txt"
                android:text="@string/addmeal_category_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        <Spinner
                android:id="@+id/addmeal_spinner_categories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/addmeal_meal_txt"
                android:text="@string/addmeal_meal_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        <Spinner
                android:id="@+id/addmeal_spinner_meals"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/addmeal_custom_txt"
                android:text="@string/addmeal_custom_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        <TextView
                android:id="@+id/addmeal_customizations"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <Button
                android:id="@+id/addmeal_addcustomization"
                android:text="@string/button_addmeal_addcustomization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:id="@+id/addmeal_quantity_txt"
                android:text="@string/addmeal_quantity_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="1">
            <Button android:id="@+id/addmeal_quantity_minus"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="-"
                    android:gravity="center"
                    android:layout_height="60dip"
                    android:layout_width="45dip"></Button>
            <TextView
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:layout_width="30dip"
                    android:text="0"
                    android:id="@+id/addmeal_quantity_value"
                    android:paddingTop="20dip"
                    android:paddingLeft="5dip"
                    />
            <Button android:id="@+id/addmeal_quantity_plus"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="+"
                    android:gravity="center"
                    android:layout_width="45dip"
                    android:layout_height="60dip"></Button>
        </LinearLayout>

        <Button
                android:id="@+id/process_addmeal"
                android:text="@string/button_addmeal_process"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></Button>

    </LinearLayout>
</ScrollView>